--- a/metadata.yaml
+++ b/metadata.yaml
@@ -11,6 +11,9 @@ contributor:
     wikipedia:
     - https://en.wikipedia.org/wiki/Adrian_Ludwig_Richter
     - https://de.wikipedia.org/wiki/Ludwig_Richter
+covers:
+- cover_type: archival
+  image_path: 68375-h/images/cover.jpg
 creator:
   editor:
     agent_name: Blumtritt, Walter
@@ -20,6 +23,8 @@ creator:
     gutenberg_agent_id: '54746'
     url: http://www.gutenberg.org/2009/agents/54746
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68375#Ludwig-Richter-Buchlein-Mit-vielen-schonen-Holzschnitten-des-Meisters-von-Haus-und-Hof-Weib-K_
 gutenberg_issued: '2022-06-22'
 identifiers:
   gutenberg: '68375'
